# Wavefront2D

./: .gitignore  CMakeLists.txt  main.cpp
include/: log.hpp
src/: main.cpp
